# gmailcount

./: .gitignore  Cargo.toml  LICENSE  README.md  gmailcount  setup.py
.github/workflows/: build.yml  release.yml
src/: args.rs  cache.rs  error.rs  mail_count.rs  main.rs  passwords.rs
